Made changes to code

--- a/Python Absolute Beginner/Module_1_1.1_Absolute_Beginner_START_HERE.ipynb
+++ b/Python Absolute Beginner/Module_1_1.1_Absolute_Beginner_START_HERE.ipynb
@@ -92,7 +92,15 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review the code, run the code\n",
     "print(\"Hello World!\")"
@@ -107,25 +115,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hello Students!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Students!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Programmer!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Programmer!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Hello World!\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Hello World!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is \"Hello World\" for Python 3\n",
+    "print(\"Hello World!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,6 +285,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "after edit, save!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Insert a new Code cell below\n",
+    "print (\"after edit, save!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -257,6 +316,23 @@
     "- Insert a new Code cell below \n",
     "- edit cell: add print() with the message showing the keyboard Shortcut to save **Ctrl + s**\n",
     "- run the cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ctrl+s\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ctrl+s\")"
    ]
   },
   {
@@ -305,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
