--- a/Python Absolute Beginner/Module_1_1.2_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_1.2_Absolute_Beginner.ipynb
@@ -84,15 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "strings go in single\n",
+      "or double quotes\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] enter a string in the print() function using single quotes\n",
     "\n",
     "# [ ] enter a string in the print() function using double quotes\n",
+    "print('strings go in single')\n",
+    "print(\"or double quotes\")\n",
     "\n"
    ]
   },
@@ -130,11 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "299\n",
+      "2017\n"
+     ]
+    }
+   ],
    "source": [
     "# printing an Integer with python\n",
     "print(299)\n",
@@ -155,18 +171,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "576\n",
+      "2020\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print an Integer\n",
-    "\n",
+    "print(576)\n",
     "\n",
     "# [ ] print a strings made of Integer characters\n",
     "\n",
-    "\n"
+    "print(\"2020\")\n"
    ]
   },
   {
@@ -224,11 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a string\n",
+      "I am a string\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review code and Run\n",
     "# initialize the variable\n",
@@ -243,17 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run this cell using Ctrl+Enter\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review code and Run\n",
     "# assign a new string to the current_msg\n",
     "current_msg = \"Run this cell using Ctrl+Enter\"\n",
-    "\n",
     "print(current_msg)"
    ]
   },
@@ -273,14 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a new string\n"
+     ]
+    }
+   ],
    "source": [
-    "# { ] run cell above then run this cell after completing the code as directed\n",
-    "\n"
+    "# [ ] run cell above then run this cell after completing the code as directed\n",
+    "current_msg = \"This is a new string\"\n",
+    "print(current_msg)"
    ]
   },
   {
@@ -384,19 +427,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Laquisha\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string value to a variable student_name\n",
-    "\n",
+    "student_name = \"Laquisha\"\n",
     "# [ ] print the value of variable student_name\n",
-    "\n"
+    "print(student_name)"
    ]
   },
   {
@@ -412,20 +462,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Andrew\n",
+      "Andrew - 123456\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign the student_name variable  a different string value (a different name)\n",
-    "\n",
+    "student_name = \"Andrew\"\n",
     "# [ ] print the value of variable student_name\n",
-    "\n",
+    "print(student_name)\n",
     "# [ ] assign a 3rd different string value, to the variable name \n",
-    "\n",
+    "student_name = \"Andrew - 123456\"\n",
     "# [ ] print the value of variable name\n",
-    "\n"
+    "print(student_name)\n"
    ]
   },
   {
@@ -442,20 +499,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list\n",
+      "55\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assigning a value to a variable called bucket\n",
-    "\n",
+    "bucket = \"list\"\n",
     "# [ ] print the value of bucket \n",
-    "\n",
+    "print(bucket)\n",
     "# [ ] assign an Integer value (no quotes) to the variable bucket\n",
-    "\n",
+    "bucket = 55\n",
     "# [ ] print the value of bucket \n",
-    "\n",
+    "print(bucket)\n",
     "\n"
    ]
   },
@@ -484,16 +548,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "123\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print integer 123 number\n",
-    "\n",
+    "print(123)\n",
     "# [ ] print string \"123\" number\n",
-    "\n",
+    "print(\"123\")\n",
     "\n"
    ]
   },
@@ -522,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
