--- a/Python Absolute Beginner/Module_1_2.1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_2.1_Absolute_Beginner.ipynb
@@ -52,9 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# review and run code - enter a small integer in the text box\n",
@@ -80,16 +78,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] get input for the variable student_name\n",
-    "\n",
+    "print(\"enter student name:\")\n",
+    "student_name = input()\n",
     "# [ ] determine the type of student_name\n",
-    "\n",
-    "\n"
+    "type(student_name)\n"
    ]
   },
   {
@@ -110,16 +106,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] run cell several times entering a name a int number and a float number after adding code below\n",
-    "print(\"enter a name or number\")\n",
+    "print(\"enter float number\")\n",
     "test_input = input()\n",
     "# [ ] insert code below to check the type of test_input\n",
-    "\n",
+    "type(test_input)\n",
     "\n"
    ]
   },
@@ -148,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "student_name = input(\"enter the student name: \")  \n",
@@ -171,15 +163,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] get user input for a city name in the variable named city\n",
-    "\n",
+    "city_name = input(\"enter a city name: \")\n",
     "# [ ] print the city name\n",
-    "\n",
+    "print(city_name)\n",
     "\n"
    ]
   },
@@ -207,19 +197,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter name: Laquisha\n",
+      "enter age: 45\n",
+      "enter yes/no: yes\n",
+      "My name is Laquisha I am 45 and yes\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]create variables to store input: name, age, get_mail with prompts\n",
     "# for name, age and yes/no to being on an email list\n",
-    "\n",
+    "name = input(\"enter name: \")\n",
+    "age = input(\"enter age: \")\n",
+    "wants_email = input(\"enter yes/no: \")\n",
     "\n",
     "# [ ] print a description + variable value for each variable\n",
-    "\n",
-    "\n"
+    "print(\"My name is \" + name  + \" I am \" + age  + \" and \" + wants_email)\n"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
