--- a/Python Absolute Beginner/Module_1_2.2_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_2.2_Absolute_Beginner.ipynb
@@ -58,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# review and run code\n",
@@ -86,13 +84,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print 3 strings on the same line using commas inside the print() function \n",
-    "\n"
+    "name = \"Laquisha\"\n",
+    "\n",
+    "# string addition\n",
+    "print(\"Hello \" + name + \"!\")\n",
+    "\n",
+    "# comma seperation formatting\n",
+    "print(\"Hello to\" ,name, \"who is from Georgia\")\n"
    ]
   },
   {
@@ -121,9 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# review and run code\n",
@@ -133,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# review and run code\n",
@@ -155,13 +153,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] use a print() function with comma separation to combine 2 numbers and 2 strings\n",
-    "\n"
+    "print(\"The party is at\" ,6, \"but we will arrive at\" ,5)\n"
    ]
   },
   {
@@ -184,17 +180,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] get user input for a street name in the variable, street\n",
-    "\n",
+    "street = input(\"enter street name: \")\n",
     "# [ ] get user input for a street number in the variable, st_number\n",
-    "\n",
+    "st_number = input(\"enter street number: \")\n",
     "# [ ] display a message about the street and st_number\n",
-    "\n",
+    "print(\"The store is on\" ,street  ,\"lot\" ,st_number)\n",
     "\n"
    ]
   },
@@ -210,15 +204,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] define a variable with a string or numeric value\n",
-    "\n",
+    "age_group = 45\n",
     "# [ ] display a message combining the variable, 1 or more literal strings and a number\n",
-    "\n",
+    "print(\"I am\", age_group, \"years old\", \"and I feel like I am\", 50 )\n",
     "\n"
    ]
   },
@@ -255,21 +247,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter owner of reservation: Laquisha\n",
+      "enter the number of people attending: 4\n",
+      "enter class time: 5\n",
+      "Reminder: A Yoga class is scheduled at 5 PM for Laquisha plus 4 attendees. Please check-in 10 minutes early for this class.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input for variables: owner, num_people, training_time  - use descriptive prompt text\n",
-    "owner = \n",
-    "num_people = \n",
-    "training_time = \n",
+    "owner = input(\"enter owner of reservation: \")\n",
+    "num_people = input(\"enter the number of people attending: \") \n",
+    "training_time = input(\"enter class time: \")\n",
     "# [ ] create a integer variable min_early and \"hard code\" the integer value (e.g. - 5, 10 or 15)\n",
-    "min_early = \n",
-    "# [ ] print reminder text using all variables & add additional strings -  use comma separated print formatting\n",
-    "\n",
-    "\n"
+    "min_early = 10\n",
+    "# [ ] print text using all variables & add additional strings -  use comma separated print formatting\n",
+    "print(\"Reminder: A Yoga class is scheduled at\" ,training_time ,\"PM\" ,\"for\", owner, \"plus\", num_people, \"attendees.\", \n",
+    "      \"Please check-in\" ,min_early ,\"minutes early for this class.\")\n"
    ]
   },
   {
@@ -297,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
