--- a/Python Absolute Beginner/Module_1_2.4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_2.4_Absolute_Beginner.ipynb
@@ -56,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"ms. Browning is in her office.\".capitalize())"
@@ -67,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fav_color = \"green\"\n",
@@ -89,24 +85,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] get input for a variable, fav_food, that describes a favorite food\n",
-    "\n",
+    "fav_food = \"fried chicken\"\n",
     "# [ ] display fav_food as ALL CAPS, used in a sentence\n",
-    "\n",
+    "print(\"I'll have\", fav_food.upper(), \"for dinner!\")\n",
     "\n",
     "# [ ] dispaly fav_food as all lower case, used in a sentence\n",
-    "\n",
+    "print(\"We ate\", fav_food.lower(), \"for dinner.\")\n",
     "\n",
     "# [] display fav_food with swapped case, used in a sentence\n",
-    "\n",
+    "print(fav_food.swapcase(), \"is what's for dinner.\")\n",
     "\n",
     "# [] display fav_food with capitalization, used in a sentence\n",
-    "\n",
+    "print(\"We took\", fav_food.capitalize(), \"to the neighbors for dinner.\")\n",
     "\n",
     "\n"
    ]
@@ -114,14 +108,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fav_color = \"Forest Green\"\n",
     "# [] display the fav_color variable as upper, lower, swapcase, and capitalize formatting in a single print() statement\n",
-    "\n"
+    "print(fav_color.upper(), fav_color.lower(), fav_color.swapcase(), \"and\", fav_color.capitalize())\n"
    ]
   },
   {
@@ -150,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# review and run code - test a capitalized color input\n",
@@ -172,15 +162,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [] input variable fav_color as upper\n",
-    "\n",
+    "fav_color = input(\"What is your favorite color?: \").upper()\n",
     "# [] print fav_color\n",
-    "\n",
+    "print(fav_color)\n",
     "\n"
    ]
   },
@@ -210,7 +198,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -223,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# review and run code to test case sensitive examples \n",
@@ -244,9 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# review and run code to test removing case sensitivity from a string comparison\n",
@@ -270,16 +253,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [] print 3 tests, with description text, testing the menu variable for 'pizza', 'soup' and 'dessert'\n",
     "menu = \"salad, pasta, sandwich, pizza, drinks, dessert\"\n",
-    "\n",
-    "\n",
-    "\n"
+    "print('pizza' in menu)\n",
+    "print('soup'in menu)\n",
+    "print('dessert'in menu)\n"
    ]
   },
   {
@@ -296,14 +277,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a program where the user supplies input to search the menu\n",
-    "\n",
-    "\n"
+    "menu_ask = input(\"enter item: \")\n",
+    "menu = \"salad, pasta, sandwich, pizza, chicken, drinks, dessert, burger, tacos\"\n",
+    "print('Burger'.lower()in menu.lower())\n"
    ]
   },
   {
@@ -322,26 +302,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salad, burger, pizza, drinks, dessert, tacos, \n",
+      "enter new item: chicken\n"
+     ]
+    }
+   ],
    "source": [
     "# add to menu\n",
-    "\n"
+    "menu = \"salad, burger, pizza, drinks, dessert, tacos, \"\n",
+    "print(menu)\n",
+    "add_item = input(\"enter new item: \")\n",
+    "new_menu = (menu + add_item)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salad, burger, pizza, drinks, dessert, tacos, chicken\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing Add to Menu - create user input to search for an item on the new menu\n",
-    "\n"
+    "print(new_menu)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter item: chicken\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu_ask = input(\"enter item: \")\n",
+    "print('chicken'in new_menu)\n",
+    "print('salad'in new_menu)"
    ]
   },
   {
@@ -355,15 +372,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red in paint colors =  True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] fix the error\n",
     "paint_colors = \"red, blue, green, black, orange, pink\"\n",
-    "print('Red in paint colors = ',red in paint_colors)\n",
+    "print('red in paint colors = ','red' in paint_colors)\n",
     "\n"
    ]
   },
@@ -394,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
