--- a/Python Absolute Beginner/Module_2_Practice_1_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_2_Practice_1_IntroPy.ipynb
@@ -24,54 +24,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary had a little lamb\n",
+      "its fleece was white as snow\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define and call a function short_rhyme() that prints a 2 line rhyme\n",
-    "\n"
+    "def short_rhyme():\n",
+    "    print(\"Mary had a little lamb\\nits fleece was white as snow\")\n",
+    "short_rhyme()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Title Is Python\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define (def) a simple function: title_it() and call the function\n",
     "# - has a string parameter: msg\n",
     "# - prints msg in Title Case\n",
-    "\n"
+    "def title_it(msg):\n",
+    "    print(msg.title())\n",
+    "message = \"the title is python\"\n",
+    "title_it(message)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what is the title? the title is python again\n",
+      "The Title Is Python Again\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input with prompt \"what is the title?\" \n",
     "# [ ] call title_it() using input for the string argument\n",
-    "\n"
+    "message = input(\"what is the title? \")\n",
+    "title_it(message)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fa la la la\n",
+      "Fa La La La\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define title_it_rtn() which returns a titled string instead of printing\n",
     "# [ ] call title_it_rtn() using input for the string argumetnt and print the result\n",
-    "\n"
+    "\n",
+    "def title_it_rtn(msg):\n",
+    "    return msg.title()\n",
+    "print(title_it_rtn(input()))"
    ]
   },
   {
@@ -90,14 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the adventures of sherlock holmes\n",
+      "12.99\n",
+      "Title: The Adventures Of Sherlock Holmes, costs $12.99\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create, call and test bookstore() function\n",
-    "\n"
+    "def bookstore(book, price):\n",
+    "    print(\"Title: \" + title_it_rtn(book) + \", costs $\" + price)\n",
+    "book_entry = input()\n",
+    "price_entry = input()\n",
+    "bookstore(book_entry, price_entry)"
    ]
   },
   {
@@ -109,17 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a name: Laquisha\n",
+      "enter a greeting: Hello\n",
+      "Hello Laquisha!\n"
+     ]
+    }
+   ],
    "source": [
     "def make_greeting(name, greeting = \"Hello\"):\n",
     "    return (greeting + \" \" + name + \"!\")\n",
     "\n",
     "# get name and greeting, send to make_greeting \n",
-    "print(make_greeting(get_name(), get_greeting()))\n",
     "\n",
     "def get_name():\n",
     "    name_entry = input(\"enter a name: \")\n",
@@ -129,15 +184,15 @@
     "    greeting_entry = input(\"enter a greeting: \")\n",
     "    return greeting_entry\n",
     "\n",
+    "print(make_greeting(get_name(), get_greeting()))\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "\n",
     "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
@@ -161,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
