--- a/Python Absolute Beginner/Module_3_Practice_1_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_3_Practice_1_IntroPy.ipynb
@@ -22,15 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age: 45\n",
+      "you will be 55 in 10 years\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] input avariable: age as digit and cast to int\n",
     "# if age greater than or equal to 12 then print message on age in 10 years \n",
     "# or else print message \"It is good to be\" age\n",
+    "\n",
+    "age = input(\"Enter your age: \")\n",
+    "if age.isdigit():\n",
+    "    if int(age) >= 12:\n",
+    "        print(\"you will be\", (int(age) + 10), \"in 10 years\")\n",
+    "    else:\n",
+    "        print(\"it is great to be\", age+ \"!\")\n",
+    "else:\n",
+    "    print(\"Invalid age! \")\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -39,18 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: s\n",
+      "only int is accepted\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] input a number \n",
     "# if number IS a digit string then cast to int\n",
     "# print number \"greater than 100 is\" True/False\n",
     "# if number is NOT a digit string then message the user that \"only int is accepted\"\n",
     "\n",
-    "\n"
+    "number = input(\"Enter a number: \")\n",
+    "if number.isdigit():\n",
+    "    print(\"greater than 100 is:\",int(number) > 100 )\n",
+    "else:\n",
+    "    print(\"only int is accepted\")\n"
    ]
   },
   {
@@ -66,28 +94,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a guess: H\n",
+      "low\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] create check_guess()\n",
     "# call with test\n",
+    "\n",
+    "def check_guess(letter, guess):\n",
+    "    if guess.isalpha():\n",
+    "        if guess > letter:\n",
+    "            print(\"high\")\n",
+    "            return False\n",
+    "        elif guess < letter:\n",
+    "            print(\"low\")\n",
+    "            return False\n",
+    "        else:\n",
+    "            print(\"correct\")\n",
+    "            return True\n",
+    "    else:\n",
+    "        print(\"Invalid: please enter an alpha character\")\n",
+    "        return False\n",
+    "letter = \"h\"\n",
+    "check_guess(letter,input(\"Enter a guess: \"))\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a guess: B\n",
+      "low\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] call check_guess with user input\n",
-    "\n"
+    "\n",
+    "letter = \"b\"\n",
+    "check_guess(letter,input(\"Enter a guess: \"))"
    ]
   },
   {
@@ -106,16 +187,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter answer: k\n",
+      "Input a guess: 5\n",
+      "Invalid: please enter an alpha character\n",
+      "Input a guess: g\n",
+      "low\n",
+      "Input a guess: k\n",
+      "correct\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create letter_guess() function, call the function to test\n",
     "\n",
+    "def letter_guess(answer):\n",
+    "    loop = 0\n",
+    "    retval = False\n",
+    "    \n",
+    "    while loop < 3:\n",
+    "        your_guess = input(\"Input a guess: \")\n",
+    "        if check_guess(answer, your_guess):\n",
+    "            retval = True\n",
+    "            break\n",
+    "        loop += 1\n",
+    "    return retval\n",
+    "the_answer = input(\"Enter answer: \")\n",
+    "if the_answer.isalpha():\n",
+    "    letter_guess(the_answer)\n",
+    "else:\n",
+    "    print(\"Enter alpha character for answer letter\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -134,14 +250,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your pet story: my dog and cat played in the backyard\n",
+      "Ah, a dog\n",
+      "and I see a cat.\n",
+      "So, you have a cat\n",
+      "and a dog too!\n",
+      "Thank you for you pet story.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete pet conversation\n",
-    "\n"
+    "about_pet = input(\"Enter your pet story: \").lower()\n",
+    "if \"dog\" in about_pet:\n",
+    "    print(\"Ah, a dog\")\n",
+    "    if \"cat\" in about_pet:\n",
+    "        print(\"and I see a cat.\")\n",
+    "if \"cat\" in about_pet:\n",
+    "        print(\"So, you have a cat\")\n",
+    "        if \"dog\" in about_pet:\n",
+    "            print(\"and a dog too!\")\n",
+    "\n",
+    "print(\"Thank you for you pet story.\")\n"
    ]
   },
   {
@@ -171,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
