--- a/Python Absolute Beginner/Module_4_4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_4_4_Absolute_Beginner.ipynb
@@ -47,9 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 !\n",
+      "4 !\n",
+      "3 !\n",
+      "2 !\n",
+      "1 !\n",
+      "\n",
+      "IGNITION!\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run GREET COUNT\n",
     "greet_count = 5\n",
@@ -82,12 +96,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an animal: dog\n",
+      "Enter an animal: cat\n",
+      "Enter an animal: exit\n",
+      "Dog Cat \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the Animal Names program, run tests\n",
-    "\n"
+    "\n",
+    "num_animals = 4\n",
+    "all_animals = \"\"\n",
+    "\n",
+    "while num_animals > 0:\n",
+    "    animal_name = input(\"Enter an animal: \").lower()\n",
+    "    \n",
+    "    if animal_name == \"exit\":\n",
+    "        break\n",
+    "    else:\n",
+    "        all_animals = all_animals + animal_name.capitalize() + \" \"\n",
+    "    num_animals -= 1\n",
+    "\n",
+    "if all_animals.istitle():\n",
+    "    print(all_animals)\n",
+    "    \n",
+    "else:\n",
+    "    print(\"no animals\")\n",
+    "        "
    ]
   },
   {
@@ -114,9 +157,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter student's first (Letters only, No spaces): Laquisha\n",
+      "\n",
+      "Laquisha has been entered as first name\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run example that loops until a valid first name format is entered\n",
     "student_fname = \"\"\n",
@@ -149,12 +202,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a digit: 5\n",
+      "Enter a digit: 4\n",
+      "Enter a digit: 6\n",
+      "Enter a digit: 3\n",
+      "Enter a digit: 8\n",
+      "Enter a digit: 7\n",
+      "Enter a digit: 2\n",
+      "Enter a digit: 1\n",
+      "Enter a digit: f\n",
+      "54638721\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the program, run tests\n",
-    "\n"
+    "\n",
+    "long_num = \"\"\n",
+    "int_num = input(\"Enter a digit: \")\n",
+    "\n",
+    "while int_num.isdigit():\n",
+    "    long_num = long_num + int_num\n",
+    "    int_num = input(\"Enter a digit: \")\n",
+    "    \n",
+    "print(long_num)"
    ]
   },
   {
@@ -170,15 +248,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 x 1 = 1\n",
+      "2 x 2 = 4\n",
+      "3 x 3 = 9\n",
+      "4 x 4 = 16\n",
+      "5 x 5 = 25\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the code, run, fix the Logic error\n",
     "count = 1\n",
     "\n",
     "# loop 5 times\n",
-    "while count > 6:\n",
+    "while count < 6:\n",
     "    print(count, \"x\", count, \"=\", count*count)\n",
     "    count +=1\n",
     "    \n"
@@ -209,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
