--- a/Python Absolute Beginner/Module_4_Practice_1_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_4_Practice_1_IntroPy.ipynb
@@ -21,12 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The new line character is \"\\n\"\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print a string that outputs the following exactly: The new line character is \"\\n\"\n",
-    "\n"
+    "\n",
+    "print('The new line character is \"\\\\n\"')"
    ]
   },
   {
@@ -41,16 +50,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# 1\tone\t# 22\ttwo\t# 333\tthree\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] with only 1 print statement and using No Space Characters, output the text commented below  \n",
     "\n",
     "# 1       one\n",
     "# 22      two\n",
     "# 333     three\n",
-    "\n"
+    "\n",
+    "print(\"# 1\\tone\\t# 22\\ttwo\\t# 333\\tthree\")"
    ]
   },
   {
@@ -68,13 +86,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your string here: hello, how are you?\n",
+      "\"hello, how are you?\"\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and test quote_me()\n",
     "\n",
-    "\n"
+    "def quote_me(word):\n",
+    "    \n",
+    "    if word.startswith(\"\\\"\"):\n",
+    "        return \"\\'\" + word + \"\\'\"\n",
+    "    \n",
+    "    else:\n",
+    "        return \"\\\"\" + word + \"\\\"\"\n",
+    "    \n",
+    "\n",
+    "print(quote_me(input(\"Enter your string here: \")))\n"
    ]
   },
   {
@@ -97,12 +133,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input shirt color: red\n",
+      "Input shirt size: m\n",
+      "Your order is Available: M size RED shirt.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create shirt order using nested if \n",
-    "\n"
+    "\n",
+    "color = input(\"Input shirt color: \").lower()\n",
+    "size = input(\"Input shirt size: \").upper()\n",
+    "\n",
+    "if color == \"blue\":\n",
+    "    if size == \"L\" or size == \"M\":\n",
+    "        available = True\n",
+    "        \n",
+    "elif color == \"red\":\n",
+    "    if size == \"M\" or size == \"S\":\n",
+    "        available = True\n",
+    "\n",
+    "if available:\n",
+    "    print(\"Your order is Available:\", size.upper(),\"size\", color.upper() ,\"shirt.\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Your order is NOT Available.\")"
    ]
   },
   {
@@ -125,12 +187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input a string: 45\n",
+      "your string is a small number\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and test str_analysis()\n",
-    "\n"
+    "\n",
+    "def str_analysis(number):\n",
+    "    if number.isdigit():\n",
+    "        int_number = int(number)\n",
+    "        \n",
+    "        if int_number >= 99:\n",
+    "            print(\"your string is a big number\")\n",
+    "            \n",
+    "        else:\n",
+    "            print(\"your string is a small number\")\n",
+    "            \n",
+    "    elif number.isalpha():\n",
+    "        print(\"your string is all alpha\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"your string is neither a number nor all alpha\")\n",
+    "        \n",
+    "        \n",
+    "str_analysis(input(\"Input a string: \"))       "
    ]
   },
   {
@@ -156,12 +245,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter section: b\n",
+      "Enter seat no.: 3\n",
+      "Your seat is NOT Available.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and call ticket_check()\n",
-    "\n"
+    "\n",
+    "def ticket_check(section, seats):\n",
+    "    if section.startswith(\"g\") or section == \"general\":\n",
+    "        \n",
+    "        if seats.isdigit():\n",
+    "            int_seats = int(seats)\n",
+    "            \n",
+    "            if int_seats >= 1 and int_seats <= 10:\n",
+    "                return True\n",
+    "            \n",
+    "    elif section.startswith(\"f\") or section == \"floor\":\n",
+    "        if seats.isdigit():\n",
+    "            int_seats = int(seats)\n",
+    "            \n",
+    "            if int_seats >= 1 and int_seats <= 4:\n",
+    "                return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "available_seat = False\n",
+    "\n",
+    "available_seat = ticket_check(input(\"Enter section: \").lower(), input(\"Enter seat no.: \"))\n",
+    "\n",
+    "if available_seat:\n",
+    "    print(\"Your seat is Available.\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Your seat is NOT Available.\")"
    ]
   },
   {
@@ -191,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
