--- a/Python Absolute Beginner/Module_1_1.4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_1.4_Absolute_Beginner.ipynb
@@ -70,9 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Review and run code for adding a pair of 2 digit Integers\n",
     "23 + 18"
@@ -80,9 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my name is Alyssa'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Review and run code for adding 2 strings\n",
     "\"my name is \" + \"Alyssa\"  "
@@ -90,9 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my shoe color is brown'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Review and run code for adding a variable string and a literal string\n",
     "shoe_color = \"brown\"\n",
@@ -110,52 +143,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] add 3 integer numbers\n",
-    "\n"
+    "\n",
+    "56 + 12 + 2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] add a float number and an integer number\n",
-    "\n"
+    "\n",
+    "12.5 + 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This notebook belongs to Laquisha'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Add the string \"This notebook belongs to \" and a string with your first name\n",
-    "\n"
+    "\n",
+    "\"This notebook belongs to \" + \"Laquisha\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Create variables sm_number and big_number and assign numbers then add the numbers\n",
-    "\n"
+    "sm_number = 3\n",
+    "big_number = 9\n",
+    "sm_number + big_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Laquisha, remember to save the notebook frequently'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] assign a string value to the variable first_name and add to the string \", remember to save the notebook frequently\"\n",
-    "\n"
+    "\n",
+    "first_name = \"Laquisha\" \n",
+    "first_name + \", remember to save the notebook frequently\""
    ]
   },
   {
@@ -184,9 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "Happy Birthday Alton\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review & run code for assigning variables & using addition\n",
     "add_two = 34 + 16\n",
@@ -199,9 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "26\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  [ ] review & run code for Integer addition in variables and in a print function\n",
     "int_sum = 6 + 7\n",
@@ -212,9 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I do not wear a hat\n",
+      "at dinner\n"
+     ]
+    }
+   ],
    "source": [
     "# string addition in variables and in print()function\n",
     "hat_msg = \"I do not wear \" + \"a hat\"  \n",
@@ -233,37 +356,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite food is\n",
+      "fried chicken\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] perform string addition in the variable named new_msg (add a string to \"my favorite food is \")\n",
     "new_msg = \"My favorite food is\"\n",
     "print(new_msg)\n",
-    "\n"
+    "print(\"fried chicken\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] perform Integer addition in the variable named new_msg (add 2 or more Integers)\n",
-    "new_sum =   0\n",
-    "print(new_sum)\n",
-    "\n",
-    "\n"
+    "new_sum =   0 + 6 + 15\n",
+    "print(new_sum)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If it's cold, wear a big coat\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and print a new string variable, new_msg_2, that concatenates new_msg + a literal string\n",
-    "\n"
+    "\n",
+    "new_msg_2 = \"wear a big coat\"\n",
+    "new_msg = \"If it's cold, \" + new_msg_2\n",
+    "print(new_msg)\n"
    ]
   },
   {
@@ -326,36 +475,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run the code - then fix any Errors\n",
-    "total_cost = 3 + \"45\"\n",
+    "total_cost = 3 + 45\n",
     "print(total_cost)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the street number of Central School is 123\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run the code - then fix any Errors\n",
-    "school_num = 123\n",
+    "school_num = \"123\"\n",
     "print(\"the street number of Central School is \" + school_num)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'int'>\n",
+      "6.3\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Read and run the code - write a hypothesis for what you observe adding float + int\n",
-    "#  [ ] HYPOTHESIS: \n",
+    "#  [ ] HYPOTHESIS: Adding a type float and a type integer is a legal numeric addition operation, resulting in no errors.\n",
     "\n",
     "print(type(3.3))\n",
     "print(type(3))\n",
@@ -395,9 +570,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-26-a66cd24f8e8c>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-26-a66cd24f8e8c>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    print('I like the morning\")\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run the code for properly and improperly formatted print statement\n",
     "print(\"Hi!\")\n",
@@ -414,9 +598,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-0e857dd261de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# [ ] review and run the code\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'hi'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'prin' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run the code \n",
     "prin('hi')"
@@ -432,9 +628,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-28-78db4cf76d16>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-28-78db4cf76d16>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(\"where are my socks?\"\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run the code missing the closing parenthesis  \n",
     "print(\"where are my socks?\" "
@@ -449,9 +654,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-29-3f301d8f653f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-29-3f301d8f653f>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(\"my socks are in the wrong bin)\"\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "# { ] review and run the code \n",
     "print(\"my socks are in the wrong bin)\" "
@@ -475,57 +689,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my socks do not match\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] repair the syntax error \n",
-    "print('my socks do not match\") \n",
+    "print(\"my socks do not match\") \n",
     "      \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my socks match now\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] repair the NameError  \n",
-    "pront(\"my socks match now\") \n",
+    "print(\"my socks match now\") \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save the notebook frequently\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] repair the syntax error \n",
-    "print\"Save the notebook frequently\")\n",
+    "print(\"Save the notebook frequently\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alton\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] repair the NameError \n",
     "student_name = \"Alton\"\n",
-    "print(STUDENT_NAME)\n",
+    "print(student_name)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 students are signed up for tutoring\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] repair the TypeError\n",
-    "total = 3\n",
+    "total = \"3\"\n",
     "print(total + \" students are signed up for tutoring\")\n",
     "\n"
    ]
@@ -562,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
