--- a/Python Absolute Beginner/Module_1_Practice_2_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_1_Practice_2_IntroPy.ipynb
@@ -26,28 +26,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# [ ] get user input for a variable named remind_me\n",
-    "\n",
+    "remind_me = input()\n",
     "\n",
     "# [ ] print the value of the variable remind_me\n",
-    "\n"
+    "print(remind_me)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use string addition to print \"remember: \" before the remind_me input string\n",
-    "\n"
+    "print(\"remember:\", remind_me)\n"
    ]
   },
   {
@@ -67,16 +64,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] get user input for 2 variables: meeting_subject and meeting_time\n",
-    "\n",
-    "\n",
+    "meeting_subject = input(\"what is the meeting subject? \")\n",
+    "meeting_time = input(\"what is the meeting time? \")\n",
     "# [ ] use string addition to print meeting subject and time with labels\n",
-    "\n",
+    "print(\"Meeting subject:\", meeting_subject)\n",
+    "print(\"Meeting time:\", meeting_time)\n",
     "\n",
     "\n"
    ]
@@ -94,37 +90,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print the combined strings \"Wednesday is\" and \"in the middle of the week\" \n",
-    "\n"
+    "print(\"Wednesday is\" ,\"in the middle of the week\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print combined string \"Remember to\" and the string variable remind_me from input above\n",
-    "\n"
+    "\n",
+    "print(\"Remember the \" + meeting_subject + \" meeting \",\"at\" ,meeting_time + \" and don't forget to \" + remind_me )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] Combine 3 variables from above with multiple strings\n",
-    "\n"
+    "print(\"Remember to \" + remind_me )\n"
    ]
   },
   {
@@ -139,27 +130,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print a string sentence that will display an Apostrophe (')\n",
     "\n",
-    "\n"
+    "print(\"today's date is 9/3/2020\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print a string sentence that will display a quote(\") or quotes\n",
     "\n",
-    "\n"
+    "print('\"Today is a beautiful day!\"')\n"
    ]
   },
   {
@@ -187,39 +174,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print the name of vehicle: Audi\n",
+      "All alphabetical characters: True\n",
+      "All alphabetical & numeric characters: True\n",
+      "Capitalized: True\n",
+      "All lowercase: False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete vehicle tests \n",
-    "\n",
-    "\n",
+    "vehicle = input('Print the name of vehicle: ')\n",
+    "print('All alphabetical characters:', vehicle.isalpha())\n",
+    "print('All alphabetical & numeric characters:', vehicle.isalnum())\n",
+    "print('Capitalized:', vehicle.istitle())\n",
+    "print('All lowercase:', vehicle.islower())\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print True or False if color starts with \"b\" \n",
-    "\n"
+    "\n",
+    "print('color'.startswith('b'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -230,67 +228,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The time is noon.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the string variable capital_this Capitalizing only the first letter\n",
     "capitalize_this = \"the TIME is Noon.\"\n",
-    "\n"
+    "\n",
+    "capitalize_this = \"the TIME is Noon.\"\n",
+    "print(capitalize_this.capitalize())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Who WRITES like This?\n"
+     ]
+    }
+   ],
    "source": [
     "# print the string variable swap_this in swapped case\n",
     "swap_this = \"wHO writes LIKE tHIS?\"\n",
-    "\n"
+    "\n",
+    "print(swap_this.swapcase())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "can you hear me?\n"
+     ]
+    }
+   ],
    "source": [
     "# print the string variable whisper_this in all lowercase\n",
     "whisper_this = \"Can you hear me?\"\n",
-    "\n"
+    "\n",
+    "print(whisper_this.lower())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CAN YOU HEAR ME NOW!?\n"
+     ]
+    }
+   ],
    "source": [
     "# print the string variable yell_this in all UPPERCASE\n",
     "yell_this = \"Can you hear me Now!?\"\n",
-    "\n"
+    "\n",
+    "print(yell_this.upper())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a string to reformat: i am almost finished\n",
+      "I AM ALMOST FINISHED\n",
+      "i am almost finished\n",
+      "I AM ALMOST FINISHED\n",
+      "I am almost finished\n"
+     ]
+    }
+   ],
    "source": [
     "#format input using .upper(), .lower(), .swapcase, .capitalize()\n",
     "format_input = input('enter a string to reformat: ')\n",
-    "\n"
+    "\n",
+    "print(format_input.upper())\n",
+    "print(format_input.lower())\n",
+    "print(format_input.swapcase())\n",
+    "print(format_input.capitalize())"
    ]
   },
   {
@@ -302,50 +343,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blue\n",
+      "blue\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for a variable named color\n",
     "# [ ] modify color to be all lowercase and print\n",
-    "\n"
+    "\n",
+    "color = input()\n",
+    "print(color.lower())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To Finish This Module\n",
+      "to finish this module\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input using variable remind_me and format to all **lowercase** and print\n",
     "# [ ] test using input with mixed upper and lower cases\n",
-    "\n"
+    "remind_me = input().lower()\n",
+    "print(remind_me)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am almost finished\n",
+      "I AM ALMOST FINISHED\n"
+     ]
+    }
+   ],
    "source": [
     "# [] get user input for the variable yell_this and format as a \"YELL\" to ALL CAPS\n",
-    "\n"
+    "yell_this = input().upper()\n",
+    "print(yell_this)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -357,37 +414,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print names of animals: rat, dog, pig, horse, cow\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for the name of some animals in the variable animals_input\n",
     "\n",
-    "\n",
+    "animals_input = input(\"Print names of animals: \")\n",
     "# [ ] print true or false if 'cat' is in the string variable animals_input\n",
-    "\n"
+    "print('cat' in animals_input)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blue\n",
+      "False\n",
+      "Blue Blue BLUE bLUE\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for color\n",
-    "\n",
+    "color = input()\n",
     "\n",
     "# [ ] print True or False for starts with \"b\"\n",
-    "\n",
+    "print(color.startswith('b'))\n",
     "\n",
     "# [ ] print color variable value exactly as input \n",
     "#     test with input: \"Blue\", \"BLUE\", \"bLUE\"\n",
     "\n",
-    "\n",
+    "print(color, color.capitalize(), color.upper(), color.swapcase())\n",
     "\n"
    ]
   },
@@ -415,22 +487,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter 1 word item that can be read: book\n",
+      "enter 3 items that can be read: newspaper, blog, website\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# project: \"guess what I'm reading\"\n",
     "\n",
     "# 1[ ] get 1 word input for can_read variable\n",
     "\n",
-    "\n",
+    "can_read = input('enter 1 word item that can be read: ')\n",
     "# 2[ ] get 3 things input for can_read_things variable\n",
     "\n",
-    "\n",
+    "can_read_things = input('enter 3 items that can be read: ')\n",
     "# 3[ ] print True if can_read is in can_read_things\n",
-    "\n",
+    "print(can_read in can_read_things)\n",
     "\n",
     "# [] challenge: format the output to read \"item found = True\" (or false)\n",
     "# hint: look print formatting exercises\n",
@@ -466,26 +546,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter somethng eaten in the last 24 hrs: seafood, dairy, nuts, and chocolate cake\n",
+      "True\n",
+      "It is True that \"seafood, dairy, nuts, and chocolate cake\" contains \"dairy\"\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Allergy check \n",
     "\n",
     "# 1[ ] get input for test\n",
-    "\n",
+    "input_test = input('enter somethng eaten in the last 24 hrs: ')\n",
     "\n",
     "# 2/3[ ] print True if \"dairy\" is in the input or False if not\n",
-    "\n",
+    "print('dairy' in input_test)\n",
+    "print('It is', \"dairy\" in input_test.lower(), 'that \"' + input_test.lower()+ '\" contains \"dairy\"')\n",
     "\n",
     "# 4[ ] Check if \"nuts\" are in the input\n",
-    "\n",
+    "print('nuts'.lower()in input_test.lower())\n",
     "# 4+[ ] Challenge: Check if \"seafood\" is in the input\n",
-    "\n",
+    "print('seafood'.lower() in input_test.lower())\n",
     "# 4+[ ] Challenge: Check if \"chocolate\" is in the input\n",
-    "\n"
+    "print('chocolate'.lower() in input_test.lower())\n"
    ]
   },
   {
@@ -513,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
