--- a/Python Absolute Beginner/Module_2_1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_2_1_Absolute_Beginner.ipynb
@@ -49,18 +49,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World! I am sending string arguments to print \n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello World!', 'I am sending string arguments to print ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiroto Yamaguchi will be in the class for 17 year old students.\n"
+     ]
+    }
+   ],
    "source": [
     "student_age = 17\n",
     "student_name = \"Hiroto Yamaguchi\"\n",
@@ -69,9 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line 1\n",
+      "line 2\n",
+      "\n",
+      "line 4\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"line 1\")\n",
     "print(\"line 2\")\n",
@@ -94,15 +121,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hiroto Yamaguchi will be in the class for 17 year old students.\n",
+      "He\n",
+      "will\n",
+      "be\n",
+      "on\n",
+      "time\n",
+      "when\n",
+      "he\n",
+      "arrives\n"
+     ]
+    }
+   ],
    "source": [
     "#[ ] increase the number of arguments used in print() to 8 or more \n",
     "student_age = 17\n",
     "student_name = \"Hiroto Yamaguchi\"\n",
     "print(student_name,'will be in the class for',student_age, 'year old students.')\n",
-    "\n"
+    "print(\"He\")\n",
+    "print(\"will\")\n",
+    "print(\"be\")\n",
+    "print(\"on\")\n",
+    "print(\"time\")\n",
+    "print(\"when\")\n",
+    "print(\"he\")\n",
+    "print(\"arrives\")"
    ]
   },
   {
@@ -154,29 +204,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there!\n",
+      "goodbye\n"
+     ]
+    }
+   ],
    "source": [
     "# defines a function named say_hi\n",
     "def say_hi():\n",
     "    print(\"Hello there!\")\n",
-    "    print(\"goodbye\")"
+    "    print(\"goodbye\")\n",
+    "    \n",
+    "say_hi()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
    "source": [
     "# define three_three \n",
     "def three_three():\n",
-    "    print(33) "
+    "    print(33) \n",
+    "\n",
+    "three_three()"
    ]
   },
   {
@@ -200,9 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there!\n",
+      "goodbye\n",
+      "\n",
+      "33\n"
+     ]
+    }
+   ],
    "source": [
     "# Program defines and calls the say_hi & three_three functions\n",
     "# [ ] review and run the code\n",
@@ -239,12 +317,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO THERE!\n"
+     ]
+    }
+   ],
    "source": [
     "#[ ] define (def) a simple function called yell_it() and call the function\n",
-    "\n"
+    "\n",
+    "def yell_it():\n",
+    "    phrase = 'hello there'\n",
+    "    print(phrase.upper() +'!')\n",
+    "yell_it()"
    ]
   },
   {
@@ -292,9 +382,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IT IS TIME TO SAVE THE NOTEBOOK!\n"
+     ]
+    }
+   ],
    "source": [
     "# yell_this() yells the string Argument provided\n",
     "def yell_this(phrase):\n",
@@ -306,9 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi\n",
+      "Bye\n"
+     ]
+    }
+   ],
    "source": [
     "# use a default argument\n",
     "def say_this(phrase = \"Hi\"):  \n",
@@ -333,16 +440,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to python\n",
+      "WELCOME TO PYTHON\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define yell_this() \n",
     "\n",
+    "def yell_this(words_to_yell):\n",
+    "    print(words_to_yell.upper())  \n",
+    "    \n",
     "# [ ] get user input in variable words_to_yell\n",
     "\n",
+    "words_to_yell = input()\n",
+    "\n",
     "# [ ] call yell_this function with words_to_yell as argument\n",
-    "\n"
+    "yell_this(words_to_yell)\n"
    ]
   },
   {
@@ -370,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
