--- a/Python Absolute Beginner/Module_2_2_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_2_2_Absolute_Beginner.ipynb
@@ -58,11 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "let's go let's go\n"
+     ]
+    }
+   ],
    "source": [
     "# Message double returns the string Argument doubled\n",
     "def msg_double(phrase):\n",
@@ -76,11 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save Now! Save Now!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# example of functions with return values used in functions\n",
     "def msg_double(phrase):\n",
@@ -110,14 +132,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your full name: Laquisha Adkins\n",
+      "Doctor Laquisha Adkins\n"
+     ]
+    }
+   ],
    "source": [
     "# create and call make_doctor() with full_name argument from user input - then print the return value\n",
-    "\n"
+    "def make_doctor(name):\n",
+    "    return 'Doctor ' + name\n",
+    "full_name = input('Enter your full name: ')\n",
+    "print(make_doctor(full_name))\n"
    ]
   },
   {
@@ -148,11 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCHEDULE: [1st] Mathematics, [2nd] History\n"
+     ]
+    }
+   ],
    "source": [
     "def make_schedule(period1, period2):\n",
     "    schedule = (\"[1st] \" + period1.title() + \", [2nd] \" + period2.title())\n",
@@ -181,15 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCHEDULE: [1st] Mathematics, [2nd] English, [3rd] History\n",
+      "SCHEDULE: [1st] Mathematics, [2nd] English, [3rd] History, [4th] Biology, [5th] Physics, [6th] Geograpy\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] add a 3rd period parameter to make_schedule\n",
+    "def make_schedule(period1, period2, period3):\n",
+    "    schedule = (\"[1st] \" + period1.title() + \", [2nd] \" + period2.title() + \", [3rd] \" + period3.title())\n",
+    "    return schedule\n",
+    "student_schedule = make_schedule(\"mathematics\", \"english\", \"history\")\n",
+    "print(\"SCHEDULE:\", student_schedule)\n",
+    "\n",
     "# [ ] Optional - print a schedule for 6 classes (Tip: perhaps let the function make this easy)\n",
-    "\n"
+    "def make_schedule(period1, period2, period3, period4, period5, period6):\n",
+    "    schedule = (\"[1st] \" + period1.title() + \", [2nd] \" + period2.title() + \", [3rd] \" + period3.title() + \", [4th] \" + period4.title() + \", [5th] \" + period5.title() + \", [6th] \" + period6.title())\n",
+    "    return schedule\n",
+    "student_schedule = make_schedule(\"mathematics\", \"english\", \"history\", \"biology\", \"physics\", \"geograpy\")\n",
+    "print(\"SCHEDULE:\", student_schedule)\n"
    ]
   },
   {
@@ -217,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
