--- a/Python Absolute Beginner/Module_2_3_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_2_3_Absolute_Beginner.ipynb
@@ -64,19 +64,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hat available is True\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code - note: fix error in the following \"tasks\" section\n",
+    "def hat_available(color):\n",
+    "    hat_colors = 'black, red, blue, green, white, grey, brown, pink'\n",
+    "    return(color.lower() in hat_colors)\n",
+    "    \n",
+    "     # return Boolean\n",
     "have_hat = hat_available('green')  \n",
     "  \n",
     "print('hat available is', have_hat)\n",
     "\n",
-    "def hat_available(color):\n",
-    "    hat_colors = 'black, red, blue, green, white, grey, brown, pink'\n",
-    "    # return Boolean\n",
-    "    return(color.lower() in hat_colors)"
+    "   "
    ]
   },
   {
@@ -91,9 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hat available is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] fix the sequence of the code to remove the NameError\n",
     "\n",
@@ -142,18 +160,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insert a name of a bird: hawk\n",
+      "Bird available is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create function bird_available\n",
     "\n",
+    "def bird_available(bird):\n",
+    "    bird_types = \"crow, robin, parrot, eagle, sandpiper, hawk, piegon\"\n",
+    "    return (bird.lower() in bird_types)\n",
     "# [ ] user input\n",
-    "\n",
+    "bird_name = input(\"Insert a name of a bird: \")\n",
     "# [ ] call bird_available\n",
-    "\n",
+    "have_bird = bird_available(bird_name)\n",
     "# [ ] print availbility status\n",
-    "\n"
+    "print(\"Bird available is\", have_bird)"
    ]
   },
   {
@@ -169,12 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter how many you want: 13\n",
+      "13 will be ordered\n"
+     ]
+    }
+   ],
    "source": [
     "# define function how_many\n",
-    "how_many():\n",
+    "def how_many():\n",
     "    requested = input(\"enter how many you want: \")\n",
     "    return requested\n",
     "\n",
@@ -211,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
