--- a/Python Absolute Beginner/Module_3_1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_1_Absolute_Beginner.ipynb
@@ -44,11 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True means do something\n"
+     ]
+    }
+   ],
    "source": [
     "if True:\n",
     "    print(\"True means do something\")\n",
@@ -58,11 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enjoy some hot tea!\n"
+     ]
+    }
+   ],
    "source": [
     "hot_tea = True\n",
     "\n",
@@ -74,10 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "someone_i_know = False\n",
@@ -90,11 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how have you been?\n"
+     ]
+    }
+   ],
    "source": [
     "# changed the value of someone_i_know\n",
     "someone_i_know = True\n",
@@ -121,26 +137,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beautiful day today\n"
+     ]
+    }
+   ],
    "source": [
     "sunny_today = True\n",
+    "if sunny_today:\n",
+    "    print(\"beautiful day today\")\n",
+    "else:\n",
+    "    print(\"cloudy day today\")\n",
     "# [ ] test if it is sunny_today and give proper responses using if and else\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cloudy day today\n"
+     ]
+    }
+   ],
    "source": [
     "sunny_today = False\n",
+    "if sunny_today:\n",
+    "    print(\"beautiful day today\")\n",
+    "else:\n",
+    "    print(\"cloudy day today\")\n",
     "# [ ] use code you created above and test sunny_today = False\n",
     "\n"
    ]
@@ -173,11 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the title of a favorite book: The Color Purple\n",
+      "The Color Purple - nice capitalization in that title!\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "favorite_book = input(\"Enter the title of a favorite book: \")\n",
@@ -190,11 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a positive integer number: 8\n",
+      "8 is a positive integer\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "a_number = input(\"enter a positive integer number: \")\n",
@@ -213,11 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"enter a type of vehicle that starts with \"P\": Python\n",
+      "Python starts with \"P\"\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "vehicle_type = input('\"enter a type of vehicle that starts with \"P\": ')\n",
@@ -244,14 +301,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome is all lower case\n",
+      "I have $3 is not all lower case\n"
+     ]
+    }
+   ],
    "source": [
     "test_string_1 = \"welcome\"\n",
     "test_string_2 = \"I have $3\"\n",
+    "if test_string_1.islower():\n",
+    "    print(test_string_1, \"is all lower case\")\n",
+    "else:\n",
+    "    print(test_string_2, \"is not all lower case\")\n",
+    "if test_string_2.islower():\n",
+    "    print(test_string_1, \"is all lower case\")\n",
+    "else:\n",
+    "    print(test_string_2, \"is not all lower case\")\n",
     "# [ ] use if, else to test for islower() for the 2 strings\n",
     "\n"
    ]
@@ -268,15 +340,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome , starts with \"w\"\n",
+      "I have $3 , does not start with \"w\"\n",
+      "With a function it's efficient to repeat code , does not start with \"w\"\n"
+     ]
+    }
+   ],
    "source": [
     "test_string_1 = \"welcome\"\n",
     "test_string_2 = \"I have $3\"\n",
     "test_string_3 = \"With a function it's efficient to repeat code\"\n",
+    "def w_start_test():\n",
+    "    if test_string_1.startswith(\"w\"):\n",
+    "        print(test_string_1, ', starts with \"w\"')\n",
+    "    else:\n",
+    "        print(test_string_1, 'does not start with \"w\"')\n",
+    "    if test_string_2.startswith(\"w\"):\n",
+    "        print(test_string_2, ', starts with \"w\"')\n",
+    "    else:\n",
+    "        print(test_string_2,', does not start with \"w\"')\n",
+    "    if test_string_3.startswith(\"w\"):\n",
+    "        print(test_string_3,', starts with \"w\"')\n",
+    "    else:\n",
+    "        print(test_string_3,', does not start with \"w\"')\n",
+    "w_start_test()\n",
+    "  \n",
     "# [ ] create a function w_start_test() use if & else to test with startswith('w')\n",
     "\n",
     "# [ ] Test the 3 string variables provided by calling w_start_test()\n",
@@ -308,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
