--- a/Python Absolute Beginner/Module_3_3_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_3_Absolute_Beginner.ipynb
@@ -43,11 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "\"hello\" < \"Hello\""
@@ -55,11 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "\"Aardvark\" > \"Zebra\""
@@ -67,11 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "'student' != 'Student'"
@@ -79,11 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'student' >= 'Student' is True\n",
+      "'student' != 'Student' is True\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code\n",
     "print(\"'student' >= 'Student' is\", 'student' >= 'Student')\n",
@@ -92,11 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# review and run code\n",
     "\"Hello \" + \"World!\" == \"Hello World!\""
@@ -113,26 +156,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "msg = \"Hello\"\n",
+    "if msg == \"Hello\":\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")\n",
     "# [ ] print the True/False results of testing if msg string equals \"Hello\" string\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Say \"Hello\": Hello\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "greeting = \"Hello\"\n",
+    "msg = input('Say \"Hello\": ')\n",
+    "if msg == greeting:\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")\n",
     "# [ ] get input for variable named msg, and ask user to 'Say \"Hello\"'\n",
     "# [ ] print the results of testing if msg string equals greeting string\n",
     "\n",
@@ -159,11 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "message as expected\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "msg = \"Save the notebook\"\n",
@@ -176,11 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "message as expected\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "msg = \"Save the notebook\"\n",
@@ -203,13 +280,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is 8 + 13?21\n",
+      "Correct\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input for a variable, answer, and ask user 'What is 8 + 13? : '\n",
+    "answer = input(\"What is 8 + 13?\")\n",
+    "if answer == \"21\":\n",
+    "    print(\"Correct\")\n",
+    "else:\n",
+    "    print(\"Incorrect\")\n",
     "# [ ] print messages for correct answer \"21\" or incorrect answer using if/else\n",
     "# note: input returns a \"string\"\n",
     "\n"
@@ -240,13 +329,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T/F Save your notebook after edit? n\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the program, run tests\n",
+    "def tf_quiz(question, correct_ans):\n",
+    "    question = input(\"T/F \" + question)\n",
+    "    if question.lower() == correct_ans.lower():\n",
+    "        print(\"True\")\n",
+    "    else:\n",
+    "        print(\"False\")\n",
+    "tf_quiz(\"Save your notebook after edit? \", 'T')\n",
     "\n"
    ]
   },
@@ -275,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
