--- a/Python Absolute Beginner/Module_3_4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_4_Absolute_Beginner.ipynb
@@ -56,11 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter weather (sunny, rainy, snowy): hot\n",
+      "Sorry, not sure what to suggest for hot\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the code then run testing different inputs\n",
     "# WHAT TO WEAR\n",
@@ -78,11 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a guess for the secret number (1-3): 2\n",
+      "Guess is right\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review the code then run testing different inputs\n",
     "# SECRET NUMBER GUESS\n",
@@ -119,14 +133,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter size (S, M, L):xl\n",
+      "Sorry, your size is not available\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] code and test SHIRT SALE\n",
-    "\n"
+    "shirt_size = input(\"Enter size (S, M, L):\")\n",
+    "if shirt_size.upper() == \"S\":\n",
+    "    print(\"Small = $6\")\n",
+    "elif shirt_size.upper() == \"M\":\n",
+    "    print(\"Meduim = $7\")\n",
+    "elif shirt_size.upper() == \"L\":\n",
+    "    print(\"Large = $8\")\n",
+    "else:\n",
+    "    print(\"Sorry, your size is not available\")\n"
    ]
   },
   {
@@ -155,11 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n"
+     ]
+    }
+   ],
    "source": [
     "weight1 = '60' # a string\n",
     "weight2 = 170 # an integer\n",
@@ -179,30 +214,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "str_num_1 = \"11\"\n",
     "str_num_2 = \"15\"\n",
     "int_num_3 = 10\n",
+    "total_sum = int(str_num_1) + int(str_num_2) + int_num_3\n",
+    "print(total_sum)\n",
     "# [ ] Add the 3 numbers as integers and print the result\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111510\n"
+     ]
+    }
+   ],
    "source": [
     "str_num_1 = \"11\"\n",
     "str_num_2 = \"15\"\n",
     "int_num_3 = 10\n",
+    "total_sum = str_num_1 + str_num_2 + str(int_num_3)\n",
+    "print(total_sum)\n",
     "# [ ] Add the 3 numbers as test strings and print the result\n",
     "\n"
    ]
@@ -221,11 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] code and test: adding using int casting\n",
     "str_integer = \"2\"\n",
@@ -253,11 +310,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter student age (integer): 20\n",
+      "Next year student will be 21\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "student_age = input('enter student age (integer): ')\n",
@@ -267,11 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter student age (integer): 20\n",
+      "In a decade the student will be 30\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code\n",
     "# cast to int at input\n",
@@ -300,14 +371,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type number to add: 9\n",
+      "Type another number to add: 3\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] code and test the adding calculator\n",
-    "\n"
+    "int_1 = int(input(\"Type number to add: \"))\n",
+    "int_2 = int(input(\"Type another number to add: \"))\n",
+    "total = (int_1 + int_2)\n",
+    "print(total)\n"
    ]
   },
   {
@@ -321,7 +403,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
