--- a/Python Absolute Beginner/Module_3_5_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_3_5_Absolute_Beginner.ipynb
@@ -46,11 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 5 = 8\n",
+      "3 + 5 - 9 = -1\n",
+      "48/9 = 5.333333333333333\n",
+      "5*5 = 25\n",
+      "(14 - 8)*(19/4) = 28.5\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(\"3 + 5 =\",3 + 5)\n",
@@ -62,11 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a non-decimal number you wish were bigger: 78\n",
+      "Now you have 78000000\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - 'million_maker'\n",
     "def million_maker():\n",
@@ -87,74 +104,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of subtracting 15 from 43\n",
-    "\n"
+    "\n",
+    "print(43 - 15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "645\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of multiplying 15 and 43\n",
-    "\n"
+    "\n",
+    "print(15 * 43)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of dividing 156 by 12\n",
-    "\n"
+    "\n",
+    "print(156/12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of dividing 21 by 0.5\n",
-    "\n"
+    "\n",
+    "print(21/0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of adding 111 plus 84 and then subtracting 45\n",
-    "\n"
+    "\n",
+    "print(111 + 84 - 45)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the result of adding 21 and 4 and then multiplying that sum by 4\n",
-    "\n"
+    "\n",
+    "print((21 + 4) * 4)"
    ]
   },
   {
@@ -178,14 +237,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a whole number: 9\n",
+      "Enter another whole number: 3\n",
+      "9 * 3 = 27\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and test multiply() function\n",
-    "\n"
+    "def multiply(num_1, num_2):\n",
+    "    numbers = (int(num_1) * int(num_2))\n",
+    "    return numbers\n",
+    "num_1 = input(\"Enter a whole number: \")\n",
+    "num_2 = input(\"Enter another whole number: \")\n",
+    "multip_calc = multiply(num_1, num_2)\n",
+    "print(num_1, '*', num_2, '=', multip_calc)"
    ]
   },
   {
@@ -207,14 +280,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a whole number: 8\n",
+      "Enter another whole number: 4\n",
+      "Invalid operator\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create improved multiply() function and test with /, no argument, and an invalid operator ($)\n",
-    "\n",
+    "def improved_calc(operator):\n",
+    "    num_1 = input(\"Enter a whole number: \")\n",
+    "    num_2 = input(\"Enter another whole number: \")\n",
+    "    if operator == \"*\":\n",
+    "        calc = int(num_1) * int(num_2)\n",
+    "        return (num_1, \"*\", num_2, \"=\", calc)\n",
+    "    elif operator == \"/\":\n",
+    "        calc = int(num_1) / int(num_2)\n",
+    "        return (num_1, \"/\", num_2, \"=\", calc)\n",
+    "    else:\n",
+    "        print(\"Invalid operator\")\n",
+    "print(improved_calc(\"+\"))\n",
+    "    \n",
     "\n"
    ]
   },
@@ -229,17 +323,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter name: Laquisha\n",
+      "Laquisha please wait for students with names staring with 'F' and 'G' to go first today.\n"
+     ]
+    }
+   ],
    "source": [
     "# Review, run, fix \n",
     "student_name = input(\"enter name: \").capitalize()\n",
     "if student_name.startswith(\"F\"):\n",
     "    print(student_name,\"Congratulations, names starting with 'F' get to go first today!\")\n",
-    "elif student_name.startswith(\"G\")\n",
+    "elif student_name.startswith(\"G\"):\n",
     "    print(student_name,\"Congratulations, names starting with 'G' get to go second today!\")\n",
     "else:\n",
     "    print(student_name, \"please wait for students with names staring with 'F' and 'G' to go first today.\")\n",
@@ -273,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
