--- a/Python Absolute Beginner/Module_4_1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_4_1_Absolute_Beginner.ipynb
@@ -53,11 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"c\" for Cheese or \"v\" for Veggie Special: c\n",
+      "\"c\" for Cheddar or \"m\" for Manchego: c\n",
+      "Here is your Cheddar Cheese sandwich\n"
+     ]
+    }
+   ],
    "source": [
     "# simplified example\n",
     "# [ ] review the code then run and following the flowchart paths\n",
@@ -81,11 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, welcome to the sandwich shop.  Please select a sandwich.\n",
+      "\"c\" for Cheese or \"v\" for Veggie Special: c\n",
+      "\n",
+      "Please select a cheese.\n",
+      "\"c\" for Cheddar or \"m\" for Manchego: c\n",
+      "\n",
+      "Here is your Cheddar Cheese sandwich.  Thank you.\n",
+      "\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
    "source": [
     "# full example: handling some invalid input and elif statement\n",
     "# [ ] review the code then run following the flowchart paths including **invalid responses** like \"xyz123\"\n",
@@ -136,15 +158,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you want to say hello? (y/ny\n",
+      "Full Hello? (y/n)y\n",
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Say \"Hello\" with nested if\n",
     "# [ ] Challenge: handle input other than y/n\n",
-    "\n"
+    "\n",
+    "answer = input(\"Do you want to say hello? (y/n\").lower()\n",
+    "if answer == \"y\":\n",
+    "    sub_answer = input(\"Full Hello? (y/n)\")\n",
+    "    if sub_answer == \"y\":\n",
+    "        print(\"Hello!\")\n",
+    "    elif sub_answer == \"n\":\n",
+    "        print(\"Hi\")\n",
+    "    elif answer == \"n\":\n",
+    "        print(\"'(Friendly nod)'\")\n",
+    "    else: \n",
+    "        print(\"Please enter \\\"yes\\\" or \\\"no\\\"\")\n",
+    "    "
    ]
   },
   {
@@ -167,13 +209,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try to guess the bird? dove\n",
+      "Yes, great job\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create the \"Guess the bird\" program \n",
+    "\n",
+    "bird_guess = input(\"Try to guess the bird? \")\n",
+    "bird_names = \"chicken, hawk, dove, blue jay\"\n",
+    "\n",
+    "ans1 = bird_guess.lower() in bird_names\n",
+    "\n",
+    "if ans1 == False:\n",
+    "    bird_guess = input(\"Try again: \")\n",
+    "    ans2 = bird_guess.lower() in bird_names\n",
+    "    \n",
+    "    if ans2 == False:\n",
+    "        bird_guess = input(\"Try one last time: \")\n",
+    "        ans3 = bird_guess.lower() in bird_names\n",
+    "        \n",
+    "        \n",
+    "        if ans3 == False:\n",
+    "            print(\"Sorry, out of tries\")\n",
+    "        elif ans3 == True:\n",
+    "            print(\"Great!, third times a charm\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "    elif ans2 == True:\n",
+    "        print(\"Nice, great job Laquisha!\")\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "elif ans1 == True:\n",
+    "    print(\"Yes, great job\")\n",
+    "else:\n",
+    "    pass\n",
+    "        \n",
     "\n"
    ]
   },
@@ -202,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
